# terminal-typing-tutor

./: .gitignore  CONTRIBUTING.md  README.md  constants.py  data.yaml  deploy.zsh  main.py  menu.py  pyproject.toml  run_drill_test.py  run_drill_test2.py  test.py
lessons/M/: m.typ
lessons/M/1/: data.yaml
lessons/M/10/: data.yaml
lessons/M/3/: data.yaml
lessons/M/4/: data.yaml
lessons/M/7/: data.yaml
lessons/M/9/: data.yaml
lessons/Q/: menu.json  q.typ
lessons/Q/1/: 1  10  11  12  2  3  4  5  6  7  8  9  data.json  data.yaml
lessons/Q/2/: data.yaml
lessons/Q/3/: data.yaml
lessons/R/: menu.json  r.typ
lessons/R/1/: data.yaml
lessons/R/10/: data.yaml
lessons/R/11/: data.yaml
lessons/R/13/: data.yaml
lessons/R/14/: data.yaml
lessons/R/4/: data.yaml
lessons/R/5/: data.yaml
lessons/R/8/: data.yaml
lessons/S/: menu.json
lessons/S/1/: data.yaml
lessons/T/: menu.json  t.typ
lessons/T/1/: data.yaml
lessons/T/12/: data.yaml
lessons/T/13/: data.yaml
lessons/T/15/: data.yaml
lessons/T/16/: data.yaml
lessons/T/2/: data.yaml
lessons/T/3/: data.yaml
lessons/T/7/: data.yaml
lessons/T/9/: data.yaml
lessons/U/: title
lessons/U/10/: data.yaml
lessons/U/12/: data.yaml
lessons/V/: menu.json
lessons/q/: title
lessons/t/: menu.json
lessons/v/: title
series/: personal-bests.yaml
series/M/: title
series/R/: title
series/T/: menu.json
series/U/: menu.json  u.typ
series/V/: v.typ
terminal_typing_tutor/: __init__.py  _version.py  constants.py  main.py  tutor.py  update.json
tests/: main.py
(+67 files in other folders)
