[tool.poetry]
name = "terminal-typing-tutor"
version = "0.3.1"
description = "Improve your touch-typing skills in the terminal, based on the GNU Typist program"
authors = ["Justin Angeles <justinaawd@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/justinsgithub/terminal-typing-tutor"
repository = "https://github.com/justinsgithub/terminal-typing-tutor"
documentation = "https://github.com/justinsgithub/terminal-typing-tutor"
packages = [
{include = "terminal_typing_tutor"},
]

[tool.poetry.scripts]
ttt = "terminal_typing_tutor.main:main"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.9.0"}
blessed = "^1.20.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
